--- a/Problems/rotation_curves/rotation-curves-problems.ipynb
+++ b/Problems/rotation_curves/rotation-curves-problems.ipynb
@@ -15,20 +15,18 @@
    "source": [
     "<h2>1) Galaxy Rotation Curves</h2>\n",
     "\n",
-    "Derive from first principles (Newtonian gravity) and plot the expected orbital velocity\n",
-    "profiles (orbital velocity versus radius) for stars in a galaxy, assuming a circular orbit,\n",
-    "and the following density profiles:\n",
+    "<b>1.1</b> Derive from first principles (Newtonian gravity) the expected orbital velocity profiles (orbital velocity versus radius) for stars in a galaxy, assuming a circular orbit, and the following density profiles:\n",
     "\n",
-    " <ul>\n",
+    "<ul>\n",
     "  <li>Constant density <br/>\n",
     "      &emsp;&emsp;$\\rho(r<R_0)=\\rho_0$</li>\n",
-    "  <li>Density which decreases as <br/>\n",
+    "  <li>Cored powerlaw with density profile<br/>\n",
     "      &emsp;&emsp;$\\rho(r)=\\frac{\\rho_0}{(1+(r/R_0)^2)}$ </li>\n",
-    "  <li>Density which decreases as <br/>\n",
+    "  <li>NFW profile given by<br/>\n",
     "      &emsp;&emsp;$\\rho(r)=\\frac{\\rho_0}{(r/R_s)(1+(r/R_s))^2}$</li>\n",
     "</ul> \n",
     "\n",
-    "and plot the results."
+    "<b>1.2</b> Hence plot each of the three velocity curves."
    ]
   },
   {
@@ -91,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. The data for the velocity rotation curve of Messier 33 is given below. \n",
+    "The data for the velocity rotation curve of Messier 33 is given below. \n",
     "\n",
     "```python\n",
     "# Radius (kpc)\n",
@@ -103,11 +101,11 @@
     "           105.9, 105.7, 106.8, 107.3, 108.3, 109.7, 112.0, 116.1, 117.2, 116.5, 115.7, 117.4, 116.8])\n",
     "```\n",
     "\n",
-    "a. Plot the rotational velocity as a function of radius\n",
+    "<b>a</b>. Plot the rotational velocity as a function of radius\n",
     "\n",
-    "b. Use the scipy curve fitting tool to fit the velocity curves calculated for the cored power law and the NFW profiles. Which do you think looks like the best fit? \n",
+    "<b>b</b>. Use the scipy curve fitting tool to fit the velocity curves calculated for the cored power law and the NFW profiles. Which do you think looks like the best fit? \n",
     "\n",
-    "c. Once the parameters $\\rho_0$ and $r_0$ are known for each model, plot both expected density profiles on a new graph. Make sure that this graph is plotted on a log-log scale so that the power-law behaviour can be seen. \n",
+    "<b>c</b>. Once the parameters $\\rho_0$ and $r_0$ are known for each model, plot both expected density profiles on a new graph. Make sure that this graph is plotted on a log-log scale so that the power-law behaviour can be seen. \n",
     "\n",
     "<i>data source: https://iopscience.iop.org/article/10.3847/1538-3881/aa79f3</i><br/>\n",
     "<i>curve fitting tool: https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.curve_fit.html</i>"
@@ -186,7 +184,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -200,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
