--- a/Problems/wimp_relic_density/wimp-relic-solutions.ipynb
+++ b/Problems/wimp_relic_density/wimp-relic-solutions.ipynb
@@ -30,13 +30,11 @@
    "source": [
     "## 1) The equilibrium curve $Y_{eq}$\n",
     "\n",
-    "<ul>\n",
-    "<li>Assuming that the WIMP is always non-relativistic, write functions for the number density in equilibrium $n_{eq}$ and entropy $s$. To make things easier later, you should write the function such that they take x as an input parameter as well as any relevant constants.</li>\n",
+    "**1.1** Assuming that the WIMP is always non-relativistic, write functions for the number density in equilibrium $n_{eq}$ and entropy $s$. To make things easier later, you should write the function such that they take x as an input parameter as well as any relevant constants.\n",
     "\n",
-    "<li>Hence plot the equilibrium abundance $Y_{eq} = n_{eq}/s$ as a function of $x = m_{\\chi}/T$</li>\n",
-    "</ul>\n",
+    "**1.2** Hence plot the equilibrium abundance $Y_{eq} = n_{eq}/s$ as a function of $x = m_{\\chi}/T$\n",
     "\n",
-    "<i>Hint: Assume $g_{*s}(T)$ is a constant $g_{*s} = 90$.</i>"
+    "*Hint: Assume $g_{*s}(T)$ is a constant $g_{*s} = 90$.*"
    ]
   },
   {
@@ -102,8 +100,8 @@
     "\\end{equation}\n",
     "\n",
     "While a little more sophisticated, this is the basic principle of ODE solvers such as <a href=\"https://docs.scipy.org/doc/scipy/reference/generated/scipy.integrate.odeint.html\">`scipy.integrate.odeint`</a>.\n",
-    "<ul>\n",
-    "<li>\n",
+    "\n",
+    "\n",
     "As an example case, use `odeint` or otherwise to numerically solve the following:\n",
     "\n",
     "\\begin{equation}\n",
@@ -111,9 +109,6 @@
     "\\end{equation}\n",
     "\n",
     "from the initial condition $(x_i, y_i) = (0,-192)$.\n",
-    "</li>\n",
-    "</ul>\n",
-    "\n",
     "\n",
     "<i>Hint: Examples and tutorial video given <a href = \"https://apmonitor.com/pdc/index.php/Main/SolveDifferentialEquations\">here</a>."
    ]
@@ -188,15 +183,11 @@
     "\n",
     "While it is possible to use odeint to solve this equation directly, due to the large gradients it requires a large number of integration steps and is therefore very computationally expensive. One way we can get around this is to rewrite the equations in log space. \n",
     "\n",
-    "<ul>\n",
-    "    <li>Using the Boltzmann equation above, calculate $\\frac{d\\log{Y}}{d\\log{x}}$.</li>\n",
-    "    <li> Hence use `odeint` or otherwise to solve $\\log{Y}$ numerically as done in the example case for $m_{\\chi} = 100$ GeV, $\\langle \\sigma v \\rangle = 10^{-12} $ GeV$^{-2}$ and $ \\log(x) $ in the range $ \\{0, 3\\}$. You can assume that the cross section is independent of temperature.</li>\n",
-    "    <li>Plot the result on the same graph as $Y_{eq}$.</li>\n",
-    "</ul>\n",
+    "**3.1** Using the Boltzmann equation above, calculate $\\frac{d\\log{Y}}{d\\log{x}}$.\n",
     "\n",
-    "\\begin{equation}\n",
-    "    \\frac{d\\log Y}{d\\log x} = \\frac{dY}{dx}\\frac{x}{Y}\n",
-    "\\end{equation}\n",
+    "**3.2** Hence use `odeint` or otherwise to solve $\\log{Y}$ numerically as done in the example case for $m_{\\chi} = 100$ GeV and $ \\log(x) $ in the range $ \\{0, 3\\}$. You can assume that the cross section is independent of temperature.\n",
+    "\n",
+    "**3.3** Plot the result on the same graph as $Y_{eq}$.\n",
     "\n",
     "*Hint: Since the our values vary on logarithmic scales, it is often easier solve our ODE with `odeint()` in log-space*"
    ]
@@ -277,9 +268,7 @@
    "source": [
     "## 4) $Y_{\\infty}$ as a function of $\\langle \\sigma v \\rangle$\n",
     "\n",
-    "<ul>\n",
-    "    <li>Repeat the above step for a few different values for the cross section in the range $\\{10^{-12}, 10^{-8}\\}$ GeV$^{-2}$ at a fixed WIMP mass.</li>\n",
-    "</ul>"
+    "**4.1** Repeat the above step for a few different values for the cross section in the range $\\{10^{-14}, 10^{-8}\\}$ GeV$^{-2}$ at a fixed WIMP mass."
    ]
   },
   {
@@ -340,11 +329,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<ul>\n",
-    "    <li>For each, extract the final value of $Y$. Hence make a plot of $Y_{\\infty}$ against $\\langle \\sigma v \\rangle$. Use <a href = \"https://numpy.org/doc/1.18/reference/generated/numpy.polyfit.html\">`numpy.polyfit`</a> to determine the relationship.</li>\n",
-    "    <li> How does this compare to our approximate solution from question 7 of problem sheet 5?</li>\n",
-    "</ul>\n",
-    "<i>Hint: We expect a power law profile.</i>"
+    "**4.2** For each, extract the final value of $Y$. Hence make a plot of $Y_{\\infty}$ against $\\langle \\sigma v \\rangle$. Use <a href = \"https://numpy.org/doc/1.18/reference/generated/numpy.polyfit.html\">`numpy.polyfit`</a> to determine the relationship.\n",
+    "\n",
+    "*Hint: We expect a power law profile.*"
    ]
   },
   {
@@ -394,13 +381,7 @@
    "source": [
     "## 5) $Y_{\\infty}$ as a function of $m_{\\chi}$\n",
     "\n",
-    "<ul>\n",
-    "    <li>Repeat the above step again but now for different values for the WIMP mass in the range $\\{1, 10^{6}\\}$ GeV.</li>\n",
-    "    <li>Make a plot of $Y_{\\infty}$ against $M_{\\chi}$. And determine the relationship using <a href = \"https://numpy.org/doc/1.18/reference/generated/numpy.polyfit.html\">`numpy.polyfit`</a>.</li>\n",
-    "    <li> How does this compare to our approximate solution from question 7 of problem sheet 5?</li>\n",
-    "</ul>\n",
-    "    \n",
-    "<i>Hint: We expect a power law profile.</i>"
+    "**5.1** Repeat the above step again but now for different values for the WIMP mass in the range $\\{1, 10^{6}\\}$ GeV.\n"
    ]
   },
   {
@@ -447,6 +428,15 @@
     "plt.legend(loc = 3, prop={'size': 12})\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**5.2** Make a plot of $Y_{\\infty}$ against $M_{\\chi}$. And determine the relationship using <a href = \"https://numpy.org/doc/1.18/reference/generated/numpy.polyfit.html\">`numpy.polyfit`</a>.\n",
+    "    \n",
+    "*Hint: We expect a power law profile.*"
    ]
   },
   {
@@ -502,20 +492,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the lectures we saw that the relic density can be calculated from $Y_{\\infty}$ via\n",
+    "In chapter 9, we saw that the relic density can be calculated from $Y_{\\infty}$ via\n",
     "\n",
     "\\begin{equation}\n",
     "    Y_{\\infty} = \\frac{45}{2\\pi^2}\\frac{\\Omega_{\\chi}h^2}{m_{\\chi}}\\frac{M_H^2M_{pl}^2}{T_0^3 g_{*s}(T_0)}\n",
     "\\end{equation}\n",
     "\n",
-    "<ul>\n",
-    "    <li>Use this along with your solver to calulate $\\Omega_{\\chi}h^2$ for a the ranges of masses and cross sections given above. That is, make a 2D array containing the relic density for each combination of mass and cross section.</li>\n",
-    "    <li>Plot the result using <a href = \"https://matplotlib.org/3.2.1/api/_as_gen/matplotlib.pyplot.contourf.html\">matplotlib.pyplot.contourf</a>. </li>\n",
-    "    <li>Add to your graph a single contour line indicating the values which give us the observed relic density of $\\Omega_{DM}h^2 = 0.12$. An example of how to do this is included <a href=\"https://matplotlib.org/3.1.0/gallery/images_contours_and_fields/contourf_demo.html#sphx-glr-gallery-images-contours-and-fields-contourf-demo-py\">here</a>.</li>\n",
-    "    <li> How does this compare to our approximate solution from question 7 of problem sheet 5?</li>\n",
-    "</ul>\n",
+    "**7.1** Use this along with your solver to calulate $\\Omega_{\\chi}h^2$ for a the ranges of masses and cross sections given above. That is, make a 2D array containing the relic density for each combination of mass and cross section.\n",
     "\n",
-    "*Hint: odeint() can be unstable so you may have to detect where the solution fails and tweak the inputted initial conditions*"
+    "**7.2** Plot the result using <a href = \"https://matplotlib.org/3.2.1/api/_as_gen/matplotlib.pyplot.contourf.html\">matplotlib.pyplot.contourf</a>. \n",
+    "\n",
+    "**7.3** Add to your graph a single contour line indicating the values which give us the observed relic density of $\\Omega_{DM}h^2 = 0.12$. An example of how to do this is included <a href=\"https://matplotlib.org/3.1.0/gallery/images_contours_and_fields/contourf_demo.html#sphx-glr-gallery-images-contours-and-fields-contourf-demo-py\">here</a>."
    ]
   },
   {
@@ -645,13 +632,15 @@
     "\n",
     "Input these into <a href=\"https://docs.scipy.org/doc/scipy-0.18.1/reference/generated/scipy.interpolate.interp1d.html#scipy.interpolate.interp1d\">`scipy.interpolate.interp1d`</a> to create a cubic spline.\n",
     "\n",
-    "<ul>\n",
-    "    <li> Use this to write a new function for $g_{*s}(T)$. </li>\n",
-    "    <li> Plot the interpolated value of $g_{*s}(T)$ along with the data points from the table. (Optional) include the values we would get if we chose to define $g_{*s}(T)$ as a step function (i.e. for T > 200 GeV: g_s = 106.75 etc... Nice summery <a href=\"https://physics.stackexchange.com/questions/169425/number-gt-of-relativistic-degrees-of-freedom-as-a-function-of-temperature-t\">here</a>)</li>\n",
-    "    <li> Use this function to recalculate the above steps </li>\n",
-    "</ul>    \n",
+    "**8.1** Use this to write a new function for $g_{*s}(T)$.\n",
     "\n",
-    "This functions will be used again when we calculate the axion relic density in the next lab sheet."
+    "**8.2** Plot the interpolated value of $g_{*s}(T)$ along with the data points from the table. (Optional) include the values we would get if we chose to define $g_{*s}(T)$ as a step function (i.e. for T > 200 GeV: g_s = 106.75 etc... Nice summery <a href=\"https://physics.stackexchange.com/questions/169425/number-gt-of-relativistic-degrees-of-freedom-as-a-function-of-temperature-t\">here</a>)\n",
+    "\n",
+    "**8.3** Use this function to recalculate the above steps (3 to 7)\n",
+    "\n",
+    "<i>Hint: Be careful with logs and units</i>\n",
+    "\n",
+    "This functions will be used again when we calculate the axion relic density in a later problem sheet."
    ]
   },
   {
