Tidied WIMP direct detection problems

--- a/Problems/axion_relic_density/axion-relic-density-solutions.ipynb
+++ b/Problems/axion_relic_density/axion-relic-density-solutions.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "<h1><center>Calculating the axion relic density from the EOM</center></h1>\n",
     "\n",
-    "In this lab we will be solving the axion equation of motion numerically and hence calculating the relic density of axion DM today.\n"
+    "In this problem sheet we will be solving the axion equation of motion numerically and hence calculating the relic density of axion DM today.\n"
    ]
   },
   {
