Tidied axion constraint problems

--- a/Problems/axion_constraints/axion-constraints-problems.ipynb
+++ b/Problems/axion_constraints/axion-constraints-problems.ipynb
@@ -6,16 +6,14 @@
    "source": [
     "<h1><center>Axion-photon coupling constraints</center></h1>\n",
     "\n",
-    "In this lab we will be using what we learned in lectures 16 and 17, as well as touching on some of what we learned in the guest lectures, to calculatethe some of the most important constraints on the axion-photon coupling.\n",
-    "\n",
-    "As always, if you have any problems please don't hesitate to email me, even if you just want to check whether a plot looks as expected: `david.ellis@uni-goettingen.de`. \n"
+    "In this problem sheet we will be using what we learned in Chapters 14 and 15 to calculatethe some of the most important constraints on the axion-photon coupling."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Calculating QCD reference values\n",
+    "## 1) Calculating QCD reference values\n",
     "\n",
     "We will start by calculating the standard estimate for expected range of the QCD's coupling to the photon. As seen in lecture 16, this is given by\n",
     "\n",
@@ -33,9 +31,9 @@
     "\\end{cases}\n",
     "\\end{equation}\n",
     "\n",
-    "### Tasks\n",
-    "- Write a function to calculate $g_{a\\gamma}$ as a function of $m_a$ and $C_{a\\gamma}$\n",
-    "- Hence plot the axion-photon coupling as a function of mass for KSVZ and DFSZ II."
+    "**1.1** Write a function to calculate $g_{a\\gamma}$ as a function of $m_a$ and $C_{a\\gamma}$\n",
+    "\n",
+    "**1.2** Hence plot the axion-photon coupling as a function of mass for KSVZ and DFSZ II."
    ]
   },
   {
@@ -62,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ADMX\n",
+    "## 2) ADMX\n",
     "\n",
     "We will now extend what we did in problem set 6 to calculate the expected constraints from a three different campaigns by ADMX. \n",
     "\n",
@@ -82,16 +80,14 @@
     "\n",
     "where $T_{\\mathrm{sys}}$ is the system temperature.\n",
     "\n",
-    "### Tasks\n",
-    "- Write a function to calculate the power of the cavity in watts as a function of axion mass and the various cavity parameters\n",
-    "- Use this to write an additional function for calculating the signal-to-noise ratio as a function of the same inputs plus the bandwidth and system temperature.\n",
     "\n",
-    "<i>\n",
-    "<h3>Hints</h3>\n",
+    "**2.1** Write a function to calculate the power of the cavity in watts as a function of axion mass and the various cavity parameters\n",
+    "\n",
+    "**2.2** Use this to write an additional function for calculating the signal-to-noise ratio as a function of the same inputs plus the bandwidth and system temperature.\n",
+    "\n",
+    "*Hint 1: As always, be careful with the units. You can use the fact that $1$eV$^2 = 1.44 \\times 10^{-3}$T.*\n",
     "    \n",
-    "- As always, be careful with the units. You can use the fact that $1$eV$^2 = 1.44 \\times 10^{-3}$T.\n",
-    "    \n",
-    "- See <a href=\"http://ilan.schnell-web.net/physics/natural.pdf\">here</a> for other useful conversions.</i>"
+    "*Hint 2: See <a href=\"http://ilan.schnell-web.net/physics/natural.pdf\">here</a> for other useful conversions.*"
    ]
   },
   {
@@ -148,9 +144,9 @@
     "\n",
     "Given that none of these experiments detected the axion, we can put a constraint on the axion-photon coupling by finding $g_{a\\gamma}$ such that SNR=3.\n",
     "\n",
-    "### Tasks\n",
-    "- Use <a href=\"https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.root.html\">scipy.optimize.root</a> or otherwise to find $g_{a\\gamma}$ such that SNR=3 as a function of axion mass for each of the experiments outlined above.\n",
-    "- Plot these constraints along with the QCD reference value calculated above."
+    "**2.3** Use <a href=\"https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.root.html\">scipy.optimize.root</a> or otherwise to find $g_{a\\gamma}$ such that SNR=3 as a function of axion mass for each of the experiments outlined above.\n",
+    "\n",
+    "**2.4** Plot these constraints along with the QCD reference value calculated above."
    ]
   },
   {
@@ -187,10 +183,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2><center>Horizontal Branch Stars</center></h2>\n",
-    "<center><a href= \"https://arxiv.org/pdf/1406.6053.pdf\">https://arxiv.org/pdf/1406.6053.pdf</a></center>\n",
+    "## 3) Horizontal Branch Stars\n",
     "\n",
-    "As discussed briefly in lecture 17, axions coupled to photons would significantly reduce the lifetime of stars in the horizontal branch (HB) stars. However they would produce negligible changes on the evolution of red giant branch (RGB) stars. As such, the axion-photon coupling can be constrained by measurements of \"the R parameter\" which is the ratio of HB stars to RGB stars:\n",
+    "As discussed in Chapter 15.3, axions coupled to photons would significantly reduce the lifetime of stars in the horizontal branch (HB) stars. However they would produce negligible changes on the evolution of red giant branch (RGB) stars. As such, the axion-photon coupling can be constrained by measurements of \"the R parameter\" which is the ratio of HB stars to RGB stars:\n",
     "\\begin{equation}\n",
     "    R = N_{\\mathrm{HB}}/N_{\\mathrm{RGB}}.\n",
     "\\end{equation}\n",
@@ -203,18 +198,19 @@
     "\n",
     "where $Y$ is the Helium abundance, $g_{10} ≡ g_{aγ}/10^{−10}$ GeV$^{−1}$.\n",
     "\n",
-    "The Helium abundance and R-parameter are measured to be $Y_{\\mathrm{obs}}=0.2535±0.0036$ and $R_{\\mathrm{obs}} = 1.39±0.04$ respectively, where the errors shown are the $68\\%$ confidence limits.\n",
+    "The Helium abundance and R-parameter are measured to be $Y_{\\mathrm{obs}}=0.2535±0.0036$ and $R_{\\mathrm{obs}} = 1.39±0.04$ respectively, where the errors shown are the $68\\%$ confidence limits. See [Ayala et. al](https://arxiv.org/pdf/1406.6053.pdf) for more information.\n",
     "\n",
-    "### Tasks \n",
-    "- Write a fuction to calculate $R$ as a function of $g_{a\\gamma}$ and $Y$.\n",
-    "- Hence create a <a href =\"https://matplotlib.org/3.2.0/api/_as_gen/matplotlib.pyplot.contourf.html\">contourf plot</a> (or similar) showing $R$ over some range of $g_{a\\gamma}$ and $Y$.\n",
-    "- Add lines which indicate where the R parameter is equal to the observed value as well as the $68\\%$ upper and lower limits.\n",
-    "- Add three more lines showing the observed value of $Y$ along with the upper and lower limits.\n",
+    "**3.1** Write a fuction to calculate $R$ as a function of $g_{a\\gamma}$ and $Y$.\n",
     "\n",
-    "<i>\n",
-    "<h3>Hints</h3>\n",
-    "    \n",
-    "- An example of how to plot specific contour values is shown in the both solution sheets for the second lab. </i>"
+    "**3.2** Hence create a <a href =\"https://matplotlib.org/3.2.0/api/_as_gen/matplotlib.pyplot.contourf.html\">contourf plot</a> (or similar) showing $R$ over some range of $g_{a\\gamma}$ and $Y$.\n",
+    "\n",
+    "**3.3** Add lines which indicate where the R parameter is equal to the observed value as well as the $68\\%$ upper and lower limits.\n",
+    "\n",
+    "**3.4** Add three more lines showing the observed value of $Y$ along with the upper and lower limits.\n",
+    "\n",
+    "**3.5** For the QCD axion, we can calculate the axion-photon coupling as a function of the axion mass. Therefore, this upper limit on $g_{a\\gamma}$ relates to an upper limit on the axion mass. What is this upper limit for $C_{a\\gamma} = \\mathcal{O}(1)$?\n",
+    "\n",
+    "*Hint: An example of how to plot specific contour values is shown in the both solution sheets for the second lab.*"
    ]
   },
   {
@@ -247,36 +243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tasks\n",
-    "\n",
-    "- Use <a href=\"https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.root.html\">scipy.optimize.root</a> again to find the value of $g_{a\\gamma}$ which coincides with the observed values as well as the $68\\%$ confidence interval in both directions.\n",
-    "\n",
-    "- Plot these values on your graph above to check that they come out where you would expect.\n",
-    "\n",
-    "- More the QCD axion we can calculate the axion-photon coupling as a function of the axion mass. Therefore, this upper limit on $g_{a\\gamma}$ relates to an upper limit on the axion mass. What is this upper limit for $C_{a\\gamma} = \\mathcal{O}(1)$?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Answer\n",
-    "\n",
-    "We find that the preferred value of $g_{a\\gamma}$ from horizontal branch stars is  \n",
-    "\n",
-    "\\begin{equation}\n",
-    "    g_{a\\gamma, \\mathrm{HB}} = 4.3 ^{+1.3}_{-1.9} \\times 10^{-11} \\mathrm{GeV}.\n",
-    "\\end{equation}\n",
-    "\n",
-    "For $C_{a\\gamma} = \\mathcal{O}(1)$ this relates to an axion mass of $m_a = 0.2$ eV."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h2><center>CAST</center></h2>\n",
-    "<center><a href = \"https://arxiv.org/pdf/1705.02290.pdf\">https://arxiv.org/pdf/1705.02290.pdf</a></center>\n",
+    "## 4) CAST\n",
     "\n",
     "We saw in Yoni Kahn's lecture on modern directions in axion detection that there is a mixing between the axion and the photon. For a homogenious magnetic field $B$, in the absence of a plasma frequency, the probablility of conversion from an axion to photon (or visa-versa) is given by\n",
     "\n",
@@ -288,18 +255,15 @@
     "\n",
     "We also saw in lecture 17 that we expect axions to be produced in the sun via this same mixing with photons.\n",
     "\n",
-    "In the CAST experiment a 9T magnetic field over a distance of 9.26m in an attempt to convert these solar axions into X-ray photons in their two \"conversion pipes\", each with a cross sectional area of 14.5 cm$^2$. \n",
+    "In the CAST experiment a 9T magnetic field over a distance of 9.26m in an attempt to convert these solar axions into X-ray photons in their two \"conversion pipes\", each with a cross sectional area of 14.5 cm$^2$. See [the CAST paper](https://arxiv.org/pdf/1705.02290.pdf) for more information.\n",
+    " \n",
+    "**4.1** Write a function to calculate the probability of axion-photon conversion as a function the mass, coupling strength, magnetic field strength and axion energy.\n",
     "\n",
-    "### Tasks\n",
+    "**4.2** Hence calulate and plot this probability as a function of axion mass for coupling strengths of $10^{-9}$, $10^{-11}$ and $10^{-12}$ GeV$^{-1}$.\n",
     "\n",
-    "- Write a function to calculate the probability of axion-photon conversion as a function the mass, coupling strength, magnetic field strength and axion energy.\n",
-    "- Hence calulate and plot this probability as a function of axion mass for coupling strengths of $10^{-9}$, $10^{-11}$ and $10^{-12}$ GeV$^{-1}$.\n",
-    "- You should see that the probability begins to decreases at masses around 0.01 eV. Why does this happen?\n",
+    "**4.3** You should see that the probability begins to decreases at masses around 0.01 eV. Why does this happen?\n",
     "\n",
-    "<i>\n",
-    "<h3>Hints</h3>\n",
-    "    \n",
-    "- As always, be careful with units. For low axion masses, you should expect probabilities of $\\sim 10^{-17} - 10^{-13}$. </i>"
+    "*Hint: As always, be careful with units. For low axion masses, you should expect probabilities of $\\sim 10^{-17} - 10^{-13}$.*"
    ]
   },
   {
@@ -325,11 +289,9 @@
    "source": [
     "Assume that the flux of axions incident on the CAST coversion tubes is $\\phi_a \\sim 10^{10}$ s$^{-1}$ with energies of $E\\sim \\mathcal{O}(\\mathrm{keV})$.\n",
     "\n",
-    "#### Tasks \n",
+    "**4.4** Given that the CAST experiment has a total exposure of 1132.6 hours, calculate the number of photons they would expect to see in their detector for the three coupling strengths considered above.\n",
     "\n",
-    "- Given that the CAST experiment has a total exposure of 1132.6 hours, calculate the number of photons they would expect to see in their detector for the three coupling strengths considered above.\n",
-    "\n",
-    "- Plot these numbers as a function of axion mass"
+    "**4.5** Plot these numbers as a function of axion mass"
    ]
   },
   {
@@ -354,13 +316,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Much like ADMX, the CAST collaboration has not yet detected a signal from solar axions allowing us to place constraints on the axion parameter space.\n",
+    "Like ADMX, the CAST collaboration has not yet detected a signal from solar axions allowing us to place constraints on the axion parameter space.\n",
     "\n",
-    "### Tasks\n",
+    "**4.6** Use <a href=\"https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.root.html\">scipy.optimize.root</a> one last time to calculte $g_{a\\gamma}$ such that the number of expected photons detected is 3. \n",
     "\n",
-    "- Use <a href=\"https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.root.html\">scipy.optimize.root</a> one last time to calculte $g_{a\\gamma}$ such that the number of expected photons detected is 3. \n",
-    "\n",
-    "- Hence plot this constraint on $g_{a\\gamma}$ as a function of axion mass."
+    "**4.7** Hence plot this constraint on $g_{a\\gamma}$ as a function of axion mass."
    ]
   },
   {
@@ -384,15 +344,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Task\n",
+    "### 5) Pulling it all together\n",
     "\n",
-    "- Collect together all of your constraints into one final plot over some appropriate mass range.\n",
+    "**5.1** Collect together all of your constraints into one final plot over some appropriate mass range.\n",
     "\n",
-    "<i>\n",
-    "<h3>Hint:</h3>\n",
-    "    \n",
-    "- You can use <a href=\"https://matplotlib.org/3.2.1/api/_as_gen/matplotlib.pyplot.fill_between.html\"> matplotlib.pyplot.fill_between</a> to show where the regions is disallowed by each calculation.\n",
-    "</i>"
+    "*Hint: You can use <a href=\"https://matplotlib.org/3.2.1/api/_as_gen/matplotlib.pyplot.fill_between.html\"> matplotlib.pyplot.fill_between</a> to show where the regions is disallowed by each calculation.*"
    ]
   },
   {
@@ -419,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
