--- a/Problems/pbh_microlensing/pbh-microlensing-problems.ipynb
+++ b/Problems/pbh_microlensing/pbh-microlensing-problems.ipynb
@@ -45,10 +45,13 @@
     "\n",
     "Let $x D_s$ be the distance from the observer on Earth to some point along the path to M31 (at a distance of $D_s$ away) where $x \\in \\{0, 1\\}$.\n",
     "\n",
-    "- Calculate the galactic radius at point $x$ along this path. (<i>Hint: The sun is $8.5\\times10^3$ pc away from the center of the MW</i>).\n",
-    "- Write a function which takes $x$ as an argument and returns this distance\n",
-    "- Write functions which calculate the DM density due to the MW and M31 as a function of their radius $r$ (<i>Hint: this could be a single function if it took $\\rho_0$ and $r_s$ as inputs).\n",
-    "- Finally, use these to write a python function which takes $x$ as an input and returns the combined DM density from the MW and M31. Plot the result.\n",
+    "**1.1** Calculate the galactic radius at point $x$ along this path. (<i>Hint: The sun is $8.5\\times10^3$ pc away from the center of the MW</i>).\n",
+    "\n",
+    "**1.2** Write a function which takes $x$ as an argument and returns this distance\n",
+    "\n",
+    "**1.3** Write functions which calculate the DM density due to the MW and M31 as a function of their radius $r$ (*Hint: this could be a single function if it took $\\rho_0$ and $r_s$ as inputs*).\n",
+    "\n",
+    "**1.4** Finally, use these to write a python function which takes $x$ as an input and returns the combined DM density from the MW and M31. Plot the result.\n",
     "\n"
    ]
   },
@@ -106,9 +109,11 @@
     "\n",
     "In the <i>geometical approximation</i> $u_T$ = 1.\n",
     "\n",
-    "- Write a function which takes the distance $x$ and lens mass $M_{\\mathrm{pbh}}$ as an input and returns the Einstein radius $R_E$. <i> Hints: It might make the units a little easier if you use $G = 4.30\\times 10^{-3}$ pc$M_{\\odot}^{–1}$⋅(km/s)$^2$. $R_E$ should be at a maximum when $x = 0.5$.\n",
-    "- Write a function which takes $\\hat{t}$ and $M_{\\mathrm{pbh}}$ as inputs and returns the differential detection rate $d\\Gamma / d\\hat{t}$\n",
-    "- Plot $d\\Gamma / d\\hat{t}$ as a function of $\\hat{t}$ in the range $\\hat{t} \\in \\{1, 10^6\\}$s for a few different PBH masses."
+    "**2.1** Write a function which takes the distance $x$ and lens mass $M_{\\mathrm{pbh}}$ as an input and returns the Einstein radius $R_E$. <i> Hints: It might make the units a little easier if you use $G = 4.30\\times 10^{-3}$ pc$M_{\\odot}^{–1}$⋅(km/s)$^2$. $R_E$ should be at a maximum when $x = 0.5$.\n",
+    "\n",
+    "**2.2** Write a function which takes $\\hat{t}$ and $M_{\\mathrm{pbh}}$ as inputs and returns the differential detection rate $d\\Gamma / d\\hat{t}$\n",
+    "\n",
+    "**2.3** Plot $d\\Gamma / d\\hat{t}$ as a function of $\\hat{t}$ in the range $\\hat{t} \\in \\{1, 10^6\\}$s for a few different PBH masses."
    ]
   },
   {
@@ -161,8 +166,9 @@
     "    \\end{cases}\n",
     "\\end{equation}\n",
     "\n",
-    "- Write a function that takes $M$ as an input and returns $N_{\\mathrm{exp}}$ assuming $f_{\\mathrm{pbh}} = 1$\n",
-    "- Hence plot $N_{\\mathrm{exp}}$ as a function of $M$ for $f_{\\mathrm{pbh}} = 1$ "
+    "**3.1** Write a function that takes $M$ as an input and returns $N_{\\mathrm{exp}}$ assuming $f_{\\mathrm{pbh}} = 1$\n",
+    "\n",
+    "**3.2** Hence plot $N_{\\mathrm{exp}}$ as a function of $M$ for $f_{\\mathrm{pbh}} = 1$ "
    ]
   },
   {
@@ -204,11 +210,11 @@
     "    f_{\\mathrm{pbh}}^{95\\%} = \\frac{3}{ N_{\\mathrm{exp}}(f_{\\mathrm{pbh}}=1) }\n",
     "\\end{equation}\n",
     "\n",
-    "- Hence calculate and plot the constaint from the HSC survey at the 95% confidence level $f_{\\mathrm{pbh}}^{95\\%}$\n",
+    "**4.1** Hence calculate and plot the constaint from the HSC survey at the 95% confidence level $f_{\\mathrm{pbh}}^{95\\%}$\n",
     "\n",
-    "## (Optional) Wave effects\n",
+    "## 5) Wave effects\n",
     "\n",
-    "As mentioned in 3.5, for very small masses, the Schwarzchild radius of the PBH is smaller than the typical wavelength of the observed light. This leads to suppression in the magnification which prevents us from being able to see these low mass objects. \n",
+    "For very small masses, the Schwarzchild radius of the PBH is smaller than the typical wavelength of the observed light. This leads to suppression in the magnification which prevents us from being able to see these low mass objects. \n",
     "\n",
     "The Schwarzschild radius is given by\n",
     "\\begin{equation}\n",
@@ -216,8 +222,7 @@
     "\\end{equation}\n",
     "\n",
     "HSC measures light at a wavelength of around 6000Å. We can calculate a lower-limit on the HSC sensitivity by finding the PBH mass with a Schwarzschild radius equal to this value.\n",
-    "\n",
-    "- Calculate this low-limit mass and plot it as a line on your constraint plot"
+    "\n"
    ]
   },
   {
@@ -245,14 +250,6 @@
     "plt.ylabel(\"Mass fraction, $f_{pbh}$\");\n",
     "plt.xlabel(\"Mass, $M_{pbh}$ [$M_{\\odot}$]\");"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e7a3a80e-b1a3-4994-8f85-8d1701612f70",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
